<resources>
    <string name="app_name">Picnat</string>
    <string name="welcome">welcome</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string-array name="welcome_array">
        <item name="slide_1_title">Welcome to Picnat. Let\'s enjoy your journey with us </item>
        <item name="slide_2_title">Well done. By signing up, you;ve taken your first step towards a happier,healthier life. We\'ll do everything we can to help and support you</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_connection">Internet Connection restored</string>
    <string name="skip">Skip</string>
    <string name="bookmark_image">Bookmark image</string>
</resources>
