<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.picnat.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_picnat_logo"
            app:layout_constraintBottom_toTopOf="@+id/tvemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/tvemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorWhite"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="@dimen/icon_padding"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:text="@={viewmodel.email}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tvpassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/tvpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colorWhite"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="@dimen/icon_padding"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:text="@={viewmodel.password}"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btlogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:onClick="@{() -> viewmodel.login()}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="12dp"
            app:layout_constraintBottom_toTopOf="@+id/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btlogin"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{(v) -> viewmodel.goToSignup(v)}"
            android:paddingBottom="8dp"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="12dp"
            app:layout_constraintBottom_toTopOf="@+id/labelfacebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/labelfacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/colorWhite"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>